--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import cover from "/src/assets/img/Logo JPGsArtboard 1_712.jpg";
 import Button from "@/components/Button.astro";
 import { getRelativeLocaleUrl, getAbsoluteLocaleUrl } from "astro:i18n";
 
-getAbsoluteLocaleUrl("en");
+getAbsoluteLocaleUrl("");
 export const prerender = true;
 ---
 
