--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const t = useTranslations("en");
   transition:name="nav"
   class="container fixed top-0 md:left-5 md:right-5 xl:max-w-7xl mx-auto bg-[#97979733]/20 backdrop-blur-[80px] rounded-xl py-2 px-5 flex justify-between items-center z-50"
 >
-  <a href="/en/">
+  <a href="/">
     <div class="w-26 z-50 flex items-center">
       <Image src={logo} width="60" height="60" alt="SBF logo" />
       <span
