--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,5 +1,5 @@
 ---
-import fav from "/favicon.svg";
+import fav from "public/logo.svg";
 import { ViewTransitions } from "astro:transitions";
 
 const { title } = Astro.props;
