--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,10 +107,7 @@ export const prerender = true;
                 >
               </p>
               <div class="mt-5 atropos-text">
-                <Button
-                  text="Check out"
-                  link="https://github.com/vratskyi/vratskyi.github.io"
-                />
+                <Button text="Check out" link="/about" />
               </div>
             </div>
           </div>
