--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ const t = useTranslations(lang);
   <div class="horizontal-line"></div>
   <div class="flex justify-between items-center">
     <div>
-      <h4 class="font-light text-sm lg:text-lg">
+      <h4 class="font-light text-[#FFCD64] text-sm lg:text-lg">
         © 2024 Scratch Back Flims All Rights Reserved
       </h4>
     </div>
