--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const lang = getLangFromUrl(Astro.url);
 
 <html lang={lang}>
   <body
-    class="cursor-default relative container xl:max-w-7xl md:px-5 mx-auto tracking-wide text-zinc-200 bg-[#040404]"
+    class="cursor-default relative container xl:max-w-7xl md:px-5 mx-auto tracking-wide text-zinc-200 bg-[#3F52B1]"
   >
     <Header />
     <div class="md:flex md:flex-col md:min-h-full">
