--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -5,7 +5,6 @@ import Title from "@/components/Title.astro";
 import { Image, Picture } from "astro:assets";
 import Shantanu from "/src/assets/img/Shantanu.png";
 import Anima from "/src/assets/img/Anima.png";
-import github from "/src/assets/img/github.svg";
 import blur from "/src/assets/img/bg.png";
 
 export const prerender = true;
@@ -38,7 +37,7 @@ export const prerender = true;
 
         <div class="grid justify-center content-center">
           <h6
-            class="text-4xl lg:text-5xl font-black bg-clip-text text-transparent bg-gradient-to-r from-primary-0 to-accent-0"
+            class="text-4xl lg:text-5xl font-black bg-clip-text text-transparent bg-[#FFCD64]"
           >
             Shaantanu Ray
           </h6>
@@ -58,11 +57,6 @@ export const prerender = true;
     </div>
 
     <section class="grid content-start px-3 lg:px-0 mb-[5rem] text-white">
-      <Image
-        src={blur}
-        class="fixed top-0 bottom-0 left-0 right-0 m-auto h-full w-full object-cover object-center z-[-1]"
-        alt="blur background"
-      />
       <div class="grid grid-flow-col auto-cols-auto content-center mt-20">
         <div
           class="grid lg:grid-cols-2 blur-bg rounded-xl p-5 lg:py-24 lg:px-16"
@@ -80,7 +74,7 @@ export const prerender = true;
 
           <div class="grid justify-center content-center">
             <h6
-              class="text-4xl lg:text-5xl font-black bg-clip-text text-transparent bg-gradient-to-r from-primary-0 to-accent-0"
+              class="text-4xl lg:text-5xl font-black bg-clip-text text-transparent bg-[#FFCD64]"
             >
               ANIMA PAGARE
             </h6>
