--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -59,7 +59,7 @@ let title = Astro.props;
         alt={title}
         site="https://youtu.be/Y2L_DWe1mlU"
         title="Bombers  "
-        description="Get ready to cheer for the Bombers, Chandan Nagar’s popular football team. The boys are back and ready to have a go at their opponents. Bombers is a ZEE5 Original starring Varun Mitra, Meiyang Chang, Ranvir Shorey, Aahana Kumra, Prince Narula, Sapna Pabbi, Zakir Hussain and Anup Soni. Enjoy this grand multi-starrer sports drama on ZEE5 premiering on 22 June, exclusively on ZEE5."
+        description="Written By Shantanu."
       />
       <PortfolioCard
         videoId="nD82ZhhZF_8?si=qUX1xQE5w-_2QCFK"
