--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -138,7 +138,7 @@ export const prerender = true;
                 Email: anima@scratchbackfilms.com</a
               >
               <div class="mt-5 atropos-text">
-                <Button text="Check out" link="/about" />
+                <Button text="Check out" link="/team" />
               </div>
             </div>
           </div>
