--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -70,15 +70,29 @@ const t = useTranslations("en");
               <li
                 class="hover:scale-110 duration-150 transition-all hover:cursor-pointer"
               >
-                <a href={`/portfolio/`} class="hover-link">
+                <a href={`/filmography/`} class="hover-link">
                   {t("nav.filmography")}
                 </a>
               </li>
               <li
                 class="hover:scale-110 duration-150 transition-all hover:cursor-pointer"
               >
-                <a href={`/portfolio1/`} class="hover-link">
+                <a href={`/commercials/`} class="hover-link">
                   {t("nav.commercial")}
+                </a>
+              </li>
+              <li
+                class="hover:scale-110 duration-150 transition-all hover:cursor-pointer"
+              >
+                <a href={`/events/`} class="hover-link">
+                  {t("nav.events")}
+                </a>
+              </li>
+              <li
+                class="hover:scale-110 duration-150 transition-all hover:cursor-pointer"
+              >
+                <a href={`/music/`} class="hover-link">
+                  {t("nav.music")}
                 </a>
               </li>
             </ul>
