--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,18 +77,32 @@ export const prerender = true;
                 >
                   Our Works
                 </h1>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-2">
                   <Button
                     className="w-full grid place-items-center text-3xl py-4 hover:!bg-[#FFCD64] hover:!border-[#FFCD64]"
                     text="Flimography"
-                    link="portfolio"
+                    link="filmography"
                     target="_self"
                     showIcon={false}
                   />
                   <Button
                     className="w-full grid place-items-center text-3xl py-4 hover:!bg-[#FFCD64] hover:!border-[#FFCD64]"
                     text="Commercials"
-                    link="portfolio1"
+                    link="commercials"
+                    target="_self"
+                    showIcon={false}
+                  />
+                  <Button
+                    className="w-full grid place-items-center text-3xl py-4 hover:!bg-[#FFCD64] hover:!border-[#FFCD64]"
+                    text="Events"
+                    link="events"
+                    target="_self"
+                    showIcon={false}
+                  />
+                  <Button
+                    className="w-full grid place-items-center text-3xl py-4 hover:!bg-[#FFCD64] hover:!border-[#FFCD64]"
+                    text="Music Videos"
+                    link="music"
                     target="_self"
                     showIcon={false}
                   />
